--- a/dho924s.html
+++ b/dho924s.html
@@ -112,7 +112,7 @@
                     <span class="block text-white text-lg font-mono mt-1">135-4716-4321</span>
                 </div>
             </div>
-            <a href="https://www.rigol.com" target="_blank" class="inline-block bg-cyan-500 hover:bg-cyan-400 text-slate-900 font-bold py-3 px-8 rounded-full transition-colors">访问 rigol.com</a>
+            <a href="https://www.rigol.com/zh_CN/products/oscilloscope/DHO900.html" target="_blank" class="inline-block bg-cyan-500 hover:bg-cyan-400 text-slate-900 font-bold py-3 px-8 rounded-full transition-colors">访问 rigol.com</a>
         </section>
     </main>
 
