Update link to Form 4 product page

--- a/form4.html
+++ b/form4.html
@@ -182,7 +182,7 @@
                 <p class="text-slate-400 mb-6 max-w-2xl mx-auto">
                     如需获取最新的 PreForm 软件驱动、固件更新或联系授权服务商，请访问中国官方网站。
                 </p>
-                <a href="https://formlabs3d.cn" target="_blank" class="inline-block bg-cyan-500 hover:bg-cyan-400 text-slate-900 font-bold py-3 px-8 rounded-full transition-colors">
+                <a href="https://formlabs3d.cn/3d-printers/form-4/" target="_blank" class="inline-block bg-cyan-500 hover:bg-cyan-400 text-slate-900 font-bold py-3 px-8 rounded-full transition-colors">
                     访问 formlabs3d.cn
                 </a>
             </div>
